syntax = "proto3";

package order;

option go_package = "proto/order";
option java_package = "com.example.order";
option java_multiple_files = true;

// Order service definition
service OrderService {
  // Create a new order
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  
  // Get order by ID
  rpc GetOrderById(GetOrderByIdRequest) returns (OrderResponse);
  
  // Get order by order number
  rpc GetOrderByNumber(GetOrderByNumberRequest) returns (OrderResponse);
  
  // Get all orders
  rpc GetAllOrders(GetAllOrdersRequest) returns (GetAllOrdersResponse);
  
  // Get orders by user ID
  rpc GetOrdersByUserId(GetOrdersByUserIdRequest) returns (GetAllOrdersResponse);
  
  // Update order status
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
  
  // Delete order
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
  
  // Add order item
  rpc AddOrderItem(AddOrderItemRequest) returns (OrderItemResponse);
  
  // Get order items
  rpc GetOrderItems(GetOrderItemsRequest) returns (GetOrderItemsResponse);
  
  // Remove order item
  rpc RemoveOrderItem(RemoveOrderItemRequest) returns (RemoveOrderItemResponse);
}

// Order message definition
message Order {
  int32 id = 1;
  int32 user_id = 2;
  string order_number = 3;
  double total_amount = 4;
  string status = 5;
  string shipping_address = 6;
  string billing_address = 7;
  string payment_method = 8;
  string created_at = 9;
  string updated_at = 10;
}

// Order Item message definition
message OrderItem {
  int32 id = 1;
  int32 order_id = 2;
  int32 product_id = 3;
  int32 quantity = 4;
  double unit_price = 5;
  double total_price = 6;
}

// Request/Response messages for CreateOrder
message CreateOrderRequest {
  int32 user_id = 1;
  string order_number = 2;
  double total_amount = 3;
  string status = 4;
  string shipping_address = 5;
  string billing_address = 6;
  string payment_method = 7;
}

message OrderResponse {
  Order order = 1;
  string message = 2;
  bool success = 3;
}

// Request/Response messages for GetOrderById
message GetOrderByIdRequest {
  int32 id = 1;
}

// Request/Response messages for GetOrderByNumber
message GetOrderByNumberRequest {
  string order_number = 1;
}

// Request/Response messages for GetAllOrders
message GetAllOrdersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetAllOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  string message = 5;
  bool success = 6;
}

// Request/Response messages for GetOrdersByUserId
message GetOrdersByUserIdRequest {
  int32 user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

// Request/Response messages for UpdateOrderStatus
message UpdateOrderStatusRequest {
  int32 id = 1;
  string status = 2;
}

// Request/Response messages for DeleteOrder
message DeleteOrderRequest {
  int32 id = 1;
}

message DeleteOrderResponse {
  bool success = 1;
  string message = 2;
}

// Request/Response messages for AddOrderItem
message AddOrderItemRequest {
  int32 order_id = 1;
  int32 product_id = 2;
  int32 quantity = 3;
  double unit_price = 4;
  double total_price = 5;
}

message OrderItemResponse {
  OrderItem order_item = 1;
  string message = 2;
  bool success = 3;
}

// Request/Response messages for GetOrderItems
message GetOrderItemsRequest {
  int32 order_id = 1;
}

message GetOrderItemsResponse {
  repeated OrderItem order_items = 1;
  string message = 2;
  bool success = 3;
}

// Request/Response messages for RemoveOrderItem
message RemoveOrderItemRequest {
  int32 id = 1;
}

message RemoveOrderItemResponse {
  bool success = 1;
  string message = 2;
} 